- explanation text is fixed-table interpretation (verdict, idempotence mode, next action), not runtime-generated prose.
- Gate receipt/report now separate raw observations from conclusions:
- `observed` captures deterministic counts/presence/status summaries.
- `interpreted` captures verdict, reason set, and gate-state conclusions.
- Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
- New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
- Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
- New adapter discovery command: `weftend adapter list`
- Additive receipt/summary surface:
- `safe_run_receipt.json` optional `adapter` metadata block
- `contentSummary.adapterSignals` optional deterministic adapter signal block
- Optional adapter artifacts in run output:
- `analysis/adapter_summary_v0.json`
- `analysis/adapter_findings_v0.json`
- Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
- `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
- `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
- `.xpi` extension bundles are now supported through the same deterministic ZIP-manifest path.
- Linux package coverage added to package adapter:
- `.deb` now parses deterministic AR entry metadata (bounded, no extraction/exec).
- `.rpm` now captures deterministic lead/header/script/signing hint counters from local bytes only.
- `.appimage` now captures deterministic ELF/runtime header hints (analysis-only; execution withheld).
- Archive/package tar coverage expanded:
- `.tar.xz/.txz` now follow explicit tar-plugin, fail-closed handling in archive/package lanes.
- macOS installer coverage added to package adapter: